--- a/fixme.dtx
+++ b/fixme.dtx
@@ -174,12 +174,12 @@
 % If you are building \fx from the tarball you need to execute the following
 % steps in order to extract the necessary files. \fx also requires the
 % \textsf{DoX} package (version 2.0, release date 2009/09/21 or later), to
-% build. It is not required to use the paclage.
+% build. It is not required to use the package.
 % \begin{verbatim}
 % [pdf]latex fixme.ins
 % [pdf]latex fixme.dtx
 % [pdf]latex fixme.dtx
-% makeindex -s gind fixme.dtx
+% makeindex -s gind fixme.idx
 % [pdf]latex fixme.dtx
 % [pdf]latex fixme.dtx
 % \end{verbatim}
