--- a/fixme.dtx
+++ b/fixme.dtx
@@ -70,7 +70,7 @@
 % \fi
 %
 % \catcode`\¡=14
-% ^^A\CheckSum{880}
+% \CheckSum{1613}
 % \GetFileInfo{fixme.inc}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
