--- a/TODO
+++ b/TODO
@@ -38,3 +38,4 @@ nice to have local lists of fixmes and stuff...
 * See if we want more than the silent option. For instance
   silent={log,tty,summary,all}.
 
+* Implement a more general mechanism for layout mutual exclusion.
