--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1429,6 +1429,8 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
+% \item[v4.1] New annotation layout: \texttt{marginnote}.\\
+%   Fix bug in inner layout processing.
 % \item[v4.0] Support for collaborative annotations, suggested by Michael
 %   Kubovy.\\
 %   Support for ``targeted'' notes and environments (highlighting a portion of
