Document no options to \marginnote

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -539,7 +539,9 @@
 % constructed in a non-floating way. This might be an advantage in some
 % situations but \texttt{marginnote} also comes with some disadvantages of its
 % own. For more information, please refer to \texttt{marginnote}'s
-% documentation, and also read the next section.
+% documentation, and also read the next section. Also, note that it is not
+% currently possible to pass options to the \cs{marginnote} command through
+% this layout.
 %
 % \subsubsection{Inner layout}
 % There might be various reasons for you to change the layout locally for one
