--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1555,7 +1555,20 @@
 
 %    \end{macrocode}
 % \end{macro}
-%
+% \begin{macro}{\@fxaddtolist}
+%   \marg{list}\marg{elt}\\
+%   Add \meta{elt} at the end of \meta{list}. We should check for duplicates,
+%   but this is not currently done.
+%    \begin{macrocode}
+\newcommand*\@fxaddtolist[2]{%
+  \expandafter\ifx\csname #1\endcsname\empty%
+    \expandafter\g@addto@macro\csname #1\endcsname{#2}%
+  \else%
+    \expandafter\g@addto@macro\csname #1\endcsname{,#2}%
+  \fi}
+
+%    \end{macrocode}
+% \end{macro}
 % \subsubsection{\texttt{xkeyval} related}
 % \begin{macro}{\@fxkeyifundefined}
 %   \marg{families}\marg{keys}\marg{then}\marg{else}
@@ -1936,11 +1949,7 @@
   \@fxkeyifundefined{layout}{#3}{%
     \@fxdefineboolkey[#2]{layout}{#3}%
     \expandafter\def\csname @fxlayout@#3\endcsname{#4}%
-    \expandafter\ifx\csname @fx#1layouts\endcsname\empty%
-      \expandafter\g@addto@macro\csname @fx#1layouts\endcsname{#3}%
-    \else%
-      \expandafter\g@addto@macro\csname @fx#1layouts\endcsname{,#3}%
-    \fi}{%
+    \@fxaddtolist{@fx#1layouts}{#3}}{%
     \@fxpkgerror{layout '#3' already registered}{%
       You have called \string\FXRegisterLayout\space with a name already
       in use.\MessageBreak
